--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "main": "node main.js"
+    "start": "node main.js",
+    "server": "node expressServer.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "image-data-uri": "^2.0.1",
     "merge-images": "^2.0.0",
+    "request": "^2.88.2",
+    "sharp": "^0.29.3",
     "text-to-image": "^4.1.1"
   }
 }
