--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "image-data-uri": "^2.0.1",
     "merge-images": "^2.0.0",
+    "node-fetch": "^2.6.6",
     "request": "^2.88.2",
     "sharp": "^0.29.3",
     "text-to-image": "^4.1.1"
