--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
     "lib": [
       "es5",
-      "es6"
+      "es6",
+      "ES2017",
+      "DOM"
     ] /* Specify library files to be included in the compilation. */,
     // "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
