--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.4",
+    "@types/node-fetch": "^3.0.3",
     "typescript": "^4.5.4"
   }
 }
