--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "ts-node": "^10.4.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.4",
     "@types/node-fetch": "^3.0.3",
+    "@types/sharp": "^0.29.4",
     "typescript": "^4.5.4"
   }
 }
