--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
+    "@types/merge-images": "^1.2.1",
     "@types/node": "^17.0.4",
     "@types/node-fetch": "^3.0.3",
     "@types/sharp": "^0.29.4",
