--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "caip": "^0.9.2",
+    "cross-fetch": "^3.1.4",
     "express": "^4.17.1",
     "image-data-uri": "^2.0.1",
     "merge-images": "^2.0.0",
-    "node-fetch": "^3.1.0",
     "request": "^2.88.2",
     "sharp": "^0.29.3",
     "text-to-image": "^4.1.1",
@@ -34,7 +34,6 @@
     "@types/express": "^4.17.13",
     "@types/merge-images": "^1.2.1",
     "@types/node": "^17.0.4",
-    "@types/node-fetch": "^3.0.3",
     "@types/sharp": "^0.29.4",
     "typescript": "^4.5.4"
   }
