--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
     "@types/node": "^17.0.4",
     "@types/sharp": "^0.29.4",
     "typescript": "^4.5.4"
+  },
+  "volta": {
+    "node": "14.19.0",
+    "yarn": "1.22.10"
   }
 }
